# Fips

./: DB_LCD.cpp  DB_LCD.h  DHS_GPIO.cpp  DHS_TickCommand.h  DHS_WebServer.cpp  LICENSE  README.md  upload_script.html
3D/: Accu_Housing_Bottom.stl  Accu_Top_Clipin.stl  Coil_Bottom.stl  Coil_Holder.stl  Input_Bottom.stl  Input_Top.stl  Mag_Holder.stl  Output_top.stl  Readme.md  Verbinder.stl  Verbinder_Deckel_Clipin.stl
assets/: systemarchitecture.jpg.url
hardware/: Partlist.xlsx  Readme.md
software/: Readme.md
software/DeafBlind/: CMakeLists.txt  Readme.md  _sdkconfig  partitions.csv  sdkconfig  sdkconfig.old
software/DeafBlind/cert/: Fips.crt  Fips.csr  Fips.key  Readme.txt
software/DeafBlind/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
software/DeafBlind/src/: CMakeLists.txt  DB_LCD.cpp  DB_LCD.h  DHS_1Tick_Control.cpp  DHS_1Tick_Control.h  DHS_Config.cpp  DHS_Config.h  DHS_Console.cpp  DHS_Console.h  DHS_EventHandler.h  DHS_FileSystem.cpp  DHS_FileSystem.h  DHS_GPIO.cpp  DHS_GPIO.h  DHS_LCD.cpp  DHS_LCD.h  DHS_LCDklein.cpp  DHS_LCDklein.h  DHS_Mesh.cpp  DHS_Mesh.h  DHS_Mesh_lite.cpp  DHS_Mesh_lite.h  DHS_TickCommand.cpp  DHS_TickCommand.h  DHS_Train_Control.cpp  DHS_Train_Control.h  DHS_WebServer.cpp  DHS_WebServer.h  DHS_WebsocketClient.cpp  DHS_WebsocketClient.h  fontx.cpp  fontx.h  mesh_netif.cpp  pngle.cpp  st7789.cpp  st7789.h  timer_u32.h  upload_script.html
software/DeafBlind/webpages/: Config.js  DHSHMenu.css  DHSHMenu.js  DHSsocket.js  Home.html  Home.js  Setup.html  Setup.js  index.html
(+1 files in other folders)
